about me update

--- a/about/index.html
+++ b/about/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -10,7 +11,8 @@
   <link rel="canonical" href="https://vickywang.me/">
   <meta name="author" content="Vicky W.">
 
-  <meta name="keywords" content="Vicky Wang, UX Design, User Experience Design, User interface Design, SaaS Design, B2B Booking Web Application, Business Booking, Payment Design, Team Member Management, Mobile Consumer Booking App Design, UC Berkeley">
+  <meta name="keywords"
+    content="Vicky Wang, UX Design, User Experience Design, User interface Design, SaaS Design, B2B Booking Web Application, Business Booking, Payment Design, Team Member Management, Mobile Consumer Booking App Design, UC Berkeley">
   <meta name="description"
     content="Vicky's personal website showcasing her UX portfolio, photography, and creative projects. Explore her unique perspective on design, technology, and life through engaging content and stunning visuals.">
 
@@ -45,7 +47,9 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
-<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
+    rel="stylesheet">
   <!--black font-family: 'Lato', sans-serif; -->
   <link
     href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
@@ -178,13 +182,26 @@
       </div>
       <div class="Grid Grid--full">
         <div class="Grid-cel Grey700">
-          <h3>As a UI/UX designer with a background in <a href="/architecture/" class="textUnderline ">architecture</a>,
-            I bring a unique perspective and a broad skill set
-            to my work. I have developed my skills in a startup environment, where I have been deeply engaged in all
-            stages of the design process. From conceptualization to implementation, I have been involved in every step
-            of the process, ensuring that the end product meets the needs of the user. As an example of my work, I
-            designed and <a href="https://github.com/vicky-wyq" class="textUnderline " target="_blank">implemented</a> a
-            site from scratch, deploying it on AWS S3.</h3>
+          <h3>As a UX designer working in a startup with a small team, I consistently strive to deliver seamless user
+            experiences. My expertise lies in optimizing team management and payments for improved usability in B2B web
+            apps. Additionally, I have successfully streamlined service bookings on B2C mobile platforms, resulting in
+            increased satisfaction and conversions for users</h3>
+          <h3>
+            Moreover, my exceptional ability is showcased through vickywang.me, a website that exemplifies my skills in
+            art, design, and technology. With meticulous attention to detail, I have crafted an attractive and
+            user-friendly website that leaves a lasting impression. By <a href="https://github.com/vicky-wyq"
+              class="textUnderline " target="_blank">implementing</a> responsive concepts using HTML/CSS/JS, I have
+            ensured a seamless experience across various devices. The positive feedback received from users and
+            professionals serves as a validation of the significant impact my designs have made.
+          </h3>
+
+          <h3>Overall, my expertise in digital experience design, encompassing UI/UX and <a href="/architecture/"
+              class="textUnderline ">architectural design</a>, underscores my ability to craft intuitive interfaces,
+            optimize user experiences, and think creatively across
+            both digital and physical design realms. I am dedicated to constantly pushing the boundaries of design
+            excellence, harnessing my skills to deliver impactful solutions that resonate with users and transform
+            spaces.</h3>
+
         </div>
       </div>
     </div>
@@ -521,7 +538,7 @@
 <footer class="Grey100Bg">
   <div class="">
     <div class="footer">
-      <h5 class="footer-left"> &#169; 2023 &#8212; VICKY WANG</h5>
+      <h4 class="footer-left"> &#169; 2023 &#8212; VICKY WANG</h4>
       <div class="footer-right">
         <a href="mailto:vickyw.design@gmail.com">
           <img class="footer-logo" src="../icon/mail.svg" alt="email">
