about page update

--- a/about/index.html
+++ b/about/index.html
@@ -1,6 +1,4 @@
-<!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -122,7 +120,6 @@
   <!-- Global site tag (gtag.js) - Google Analytics -->
 
 </head>
-
 <body>
   <!--progressBarScroll-->
   <div class="progressContainer">
@@ -190,13 +187,13 @@
             Moreover, my exceptional ability is showcased through vickywang.me, a website that exemplifies my skills in
             art, design, and technology. With meticulous attention to detail, I have crafted an attractive and
             user-friendly website that leaves a lasting impression. By <a href="https://github.com/vicky-wyq"
-              class="textUnderline " target="_blank">implementing</a> responsive concepts using HTML/CSS/JS, I have
+              class="textUnderline" target="_blank">implementing</a> responsive concepts using HTML/CSS/JS, I have
             ensured a seamless experience across various devices. The positive feedback received from users and
             professionals serves as a validation of the significant impact my designs have made.
           </h3>
 
           <h3>Overall, my expertise in digital experience design, encompassing UI/UX and <a href="/architecture/"
-              class="textUnderline ">architectural design</a>, underscores my ability to craft intuitive interfaces,
+              class="textUnderline">architectural design</a>, underscores my ability to craft intuitive interfaces,
             optimize user experiences, and think creatively across
             both digital and physical design realms. I am dedicated to constantly pushing the boundaries of design
             excellence, harnessing my skills to deliver impactful solutions that resonate with users and transform
@@ -218,11 +215,11 @@
   <div class="blankHXS"></div>
   <div class="wrapper">
     <div class="Grid Grid--gutters Grid--cols-2">
-      <div class="Grid-cell">
+      <div class="Grid-cell" data-aos="fade-down-right">
         <div class="element">
           <div class="elementInner cardBorder shadowBoxLt">
             <img class="iconS" src="IconSearch.svg" alt="se-arrow">
-            <h3> <strong> Understanding &#38; Testing</strong> </h3>
+            <h3 data-aos="fade-up"> <strong> Understanding &#38; Testing</strong> </h3>
             <ul>
               <li> The user needs is the foremost priority.</li>
               <li> Assess the users' requirements and prevent prejudice.</li>
@@ -231,11 +228,11 @@
           </div>
         </div>
       </div>
-      <div class="Grid-cell">
+      <div class="Grid-cell" data-aos="fade-down-left">
         <div class="element">
           <div class="elementInner cardBorder shadowBoxLt">
             <img class="iconS" src="IconCategory.svg" alt="se-arrow">
-            <h3> <strong> Structure &#38; Prioritization</strong> </h3>
+            <h3 data-aos="fade-up"> <strong> Structure &#38; Prioritization</strong> </h3>
             <ul>
               <li>Structure the flow to support the core functions</li>
               <li>Consider the overall information hierarchy and dependency </li>
@@ -247,13 +244,13 @@
 
     </div>
     <div class="Grid Grid--gutters Grid--cols-2">
-      <div class="Grid-cell">
+      <div class="Grid-cell" data-aos="fade-down-right">
         <div class="element">
           <div class="elementInner cardBorder shadowBoxLt">
             <img class="iconS" src="iconBrush.svg" alt="se-arrow">
 
 
-            <h3> <strong> Consistency &#38; Minimalism</strong> </h3>
+            <h3 data-aos="fade-up"> <strong> Consistency &#38; Minimalism</strong> </h3>
 
             <ul>
               <li>Update and maintain the design system, eliminate redundancy.</li>
@@ -263,13 +260,13 @@
           </div>
         </div>
       </div>
-      <div class="Grid-cell">
+      <div class="Grid-cell" data-aos="fade-down-left">
         <div class="element">
           <div class="elementInner cardBorder shadowBoxLt">
             <img class="iconS" src="IconDocument.svg" alt="se-arrow">
 
 
-            <h3> <strong> Learning &#38; Improving</strong> </h3>
+            <h3 data-aos="fade-up"> <strong> Learning &#38; Improving</strong> </h3>
 
             <ul>
               <li>Never stops learning, observing, or experimenting</li>
@@ -298,7 +295,7 @@
 
           <div class="progressStepContainer">
             <ul class="progress">
-              <li class="progress__item ">
+              <li class="progress__item" data-aos="fade-up">
                 <h3> <strong class="colorGrey">Art </strong> </h3>
 
                 <ul>
@@ -315,7 +312,7 @@
               </li>
               <div class="blankHXS"></div>
 
-              <li class="progress__item">
+              <li class="progress__item" data-aos="fade-up">
                 <h3> <strong class="colorGrey">Design </strong> </h3>
 
                 <ul>
@@ -326,7 +323,7 @@
               </li>
               <div class="blankHXS"></div>
 
-              <li class="progress__item">
+              <li class="progress__item" data-aos="fade-up">
                 <h3> <strong class="colorGrey">Architecture </strong> </h3>
 
                 <ul>
@@ -340,7 +337,7 @@
               </li>
               <div class="blankHXS"></div>
 
-              <li class="progress__item progress__item--active">
+              <li class="progress__item progress__item--active" data-aos="fade-up">
                 <strong>
                   <h3> <strong>User experience design </strong> </h3>
 
@@ -392,20 +389,20 @@
           <div class="lineHorizS"></div>
         </div>
 
-        <div class="element ">
-          <h4> <strong>UC Berkeley </strong> </h4>
+        <div class="element">
+          <h4 data-aos="fade-up"> <strong>UC Berkeley </strong> </h4>
           <h6 class="textItalic"> August 2015 - May 2019</h6>
           <h5>Master of Architecture </h5>
           <h5> Building Science / Technology </h5>
         </div>
-        <div class="element ">
-          <h4> <strong>Beijing University of Technology </strong> </h4>
+        <div class="element">
+          <h4 data-aos="fade-up"> <strong>Beijing University of Technology </strong> </h4>
           <h6 class="textItalic"> September 2009 - July 2013</h6>
           <h5>Bachelor of Art </h5>
           <h5> Art & Design / Landscape Design </h5>
         </div>
         <div class="element ">
-          <h4> <strong>Google UX Design Professional Certificate </strong> </h4>
+          <h4 data-aos="fade-up"> <strong>Google UX Design Professional Certificate </strong> </h4>
           <h6 class="textItalic"> August 2021 - October 2021</h6>
           <h5>Google &#124; Coursera</h5>
           <h5> UI &#47; UX Design </h5>
@@ -420,37 +417,37 @@
         </div>
 
         <div class="element ">
-          <h4> <strong> BookYourPet </strong> </h4>
+          <h4 data-aos="fade-up"> <strong> BookYourPet </strong> </h4>
           <h6 class="textItalic"> Oct. 2021 - Present</h6>
           <h5>Calabasas, CA </h5>
           <h5>UI/UX designer</h5>
         </div>
         <div class="element ">
-          <h4> <strong>vickywang.me</strong> </h4>
+          <h4 data-aos="fade-up"> <strong>vickywang.me</strong> </h4>
           <h6 class="textItalic"> October 2021 - Present</h6>
           <h5>Berkeley, CA </h5>
           <h5>Product designer - Freelancer</h5>
         </div>
         <div class="element ">
-          <h4> <strong>Buro Ole Scheeren </strong> </h4>
+          <h4 data-aos="fade-up"> <strong>Buro Ole Scheeren </strong> </h4>
           <h6 class="textItalic"> August 2017 — July 2018 </h6>
           <h5>Beijing, China </h5>
           <h5>Architectural Designer </h5>
         </div>
         <div class="element ">
-          <h4> <strong>In Design Studio </strong> </h4>
+          <h4 data-aos="fade-up"> <strong>In Design Studio </strong> </h4>
           <h6 class="textItalic">May 2017 - August 2017 </h6>
           <h5>New York, U.S. </h5>
           <h5>Summer Intern </h5>
         </div>
         <div class="element ">
-          <h4> <strong>PDI Design Group </strong> </h4>
+          <h4 data-aos="fade-up"> <strong>PDI Design Group </strong> </h4>
           <h6 class="textItalic"> December 2013 - July 2015 </h6>
           <h5>Beijing, China </h5>
           <h5>Architectural Designer </h5>
         </div>
         <div class="element ">
-          <h4> <strong>Do Union</strong> </h4>
+          <h4 data-aos="fade-up"> <strong>Do Union</strong> </h4>
           <h6 class="textItalic">July 2010 - May 2012 </h6>
           <h5>Beijing, China </h5>
           <h5>Architectural Intern </h5>
@@ -467,34 +464,34 @@
           <div class="lineHorizS"></div>
         </div>
         <div class="element">
-          <h4> <strong>UI/UX </strong> </h4>
+          <h4 data-aos="fade-up"> <strong>UI/UX </strong> </h4>
           <h5> Figma, Adobe XD, Sketch </h5>
         </div>
         <div class="element">
-          <h4> <strong>Design Research </strong> </h4>
+          <h4 data-aos="fade-up"> <strong>Design Research </strong> </h4>
           <h5>Interview & Survey </h5>
           <h5>Empathy Maps</h5>
           <h5>User Journey</h5>
           <h5>Competitive audit</h5>
         </div>
         <div class="element">
-          <h4> <strong>2D Graphic</strong> </h4>
+          <h4 data-aos="fade-up"> <strong>2D Graphic</strong> </h4>
           <h5> Adobe Suite (Illustrator, Photoshop, InDesign) AutoCAD </h5>
         </div>
         <div class="element">
-          <h4> <strong>Programming</strong> </h4>
+          <h4 data-aos="fade-up"> <strong>Programming</strong> </h4>
           <h5> HTML, CSS, JavaScript jQuery </h5>
         </div>
 
         <div class="element">
-          <h4> <strong>3D Modelling and VR </strong> </h4>
+          <h4 data-aos="fade-up"> <strong>3D Modelling and VR </strong> </h4>
           <h5> 3Dmax Studio, Rhino, SketchUp </h5>
           <h5> Grasshopper, Ladybug, DIVA </h5>
           <h5> Unity </h5>
         </div>
 
         <div class="element">
-          <h4> <strong>Fabrication</strong> </h4>
+          <h4 data-aos="fade-up"> <strong>Fabrication</strong> </h4>
           <h5> 3D Printing </h5>
           <h5> 3D Scanner (NextEngine 3D) </h5>
           <h5> CNC (Techno Isel 3-axis CNC router) </h5>
@@ -512,12 +509,13 @@
   <!-- my photo -->
   <div class="containerTQ">
     <img src="../image/me.jpg" alt="right">
-    <div class="centeredTQ">
-      <h3 data-aos="fade-up" class="colorAPPOINTABg">Thank You for Visiting&#33; To learn more, head over to my
-        website&#33;</h3>
+    <div class="centeredTQ colorAPPOINTABg paddingS border-radius">
+      <h3 data-aos="fade-up" class="Grey900">
+        Thank you for dropping by! If you have any feedback about this site or would like to get in touch, please feel
+        free to shoot me an <a href="mailto:vickyw.design@gmail.com" class="textUnderline"> email</a>&#33;
+      </h3>
+      <a href="/" class=""><img class="widthXS" src="../icon/LOGOtxt.svg" alt="VW" title="vickywang.me"></a>
 
-      <h4 class="centerHorz" data-aos="fade-up">
-        &nbsp; <a class="textProject" href="/">VICKYWANG.ME</a> </h4>
     </div>
   </div>
   <!-- my photo -->
@@ -538,7 +536,7 @@
 <footer class="Grey100Bg">
   <div class="">
     <div class="footer">
-      <h4 class="footer-left"> &#169; 2023 &#8212; VICKY WANG</h4>
+      <h4 class="footer-left element"> &#169; 2023 &#8212; VICKY WANG</h4>
       <div class="footer-right">
         <a href="mailto:vickyw.design@gmail.com">
           <img class="footer-logo" src="../icon/mail.svg" alt="email">
