--- a/index.html
+++ b/index.html
@@ -1,7 +1,5 @@
 <html lang="en">
-
 <head>
-
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -45,12 +43,6 @@
   <meta name="twitter:url" content="//vickywang.me/">
   <meta name="twitter:creator" content="VICKY WANG" />
   <!-- twitter -->
-
-
-
-
-
-
 
   <link rel="stylesheet" href="./main.css">
   <script type="text/javascript" src="scripts.js"></script>
@@ -489,7 +481,7 @@
             Thank You for Visiting &#33; Check back soon for more updates and stay tuned &#33;
           </h4>
         </div>
-        <a href="https://vickywang.me" class=""><img class="widthXS" src="./icon/LOGOtxt.svg" alt="VW" title="vickywang.me"></a>
+        <a href="/" class=""><img class="widthXS" src="./icon/LOGOtxt.svg" alt="VW" title="vickywang.me"></a>
       </div>
     </div>
     <!-- message -->
