--- a/appointa/index.html
+++ b/appointa/index.html
@@ -2250,7 +2250,7 @@
       </section>
       <!-- takeaways -->
     </div>
-    <nav class="section-nav APPOINTA">
+    <nav class="section-nav">
       <ol>
         <li><a href="#discover" class="titleRightPanel">Discover</a>
           <ul>
