--- a/design_system/index.html
+++ b/design_system/index.html
@@ -662,14 +662,14 @@
 
           <section id="content22">
             <div class="element">
-              <p class="tArrow">Break points <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></p>
+              <p class="tArrow">Break points<img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></p>
             </div>
             <div class="blankHXS"></div>
             <div class="Grid Grid--full u-textCenter">
               <div class="element">
                 <h3>Monitor</h3>
               </div>
-              <div class="Grid-cell">
+              <div class="Grid-cell paddingNone">
                 <div class="element">
                   <div class="Demo shadowBox">1880 px &#43;</div>
                 </div>
@@ -744,7 +744,7 @@
               <h3>Basic Grid</h3>
             </div>
             <div class="Grid Grid--full u-textCenter">
-              <div class="Grid-cell">
+              <div class="Grid-cell paddingNone">
                 <div class="Demo">
                   <div class="elementInnerDemo content-1of1"></div>
                 </div>
@@ -1608,9 +1608,6 @@
             </div>
           </section>
           <div class="blankHM"></div>
-
-
-
         </section>
       </div>
     </div>
