--- a/navigation/V1/index.html
+++ b/navigation/V1/index.html
@@ -146,7 +146,7 @@
   <nav class="header navbarN" id="header">
 
 
-    <div class="backgroundColorNav ">
+    <div class="backgroundColorNav">
 
       <a href="/navigation/" class="centerVer logo pointer colorBlack Grid--center"><img class="moveLeftRight iconXS"
           src="../../icon/arrow-back.svg" alt="Go back">
@@ -311,9 +311,8 @@
 
   <main>
 
-
     <div>
-      <section id="discover" class="colorBgGrey">
+      <section id="content1" class="colorBgGrey">
         <div class="Grid Grid--gutters Grid--1of2 Grid--center u-textCenter">
           <div class="Grid-cell">
             <h1 class="Grid Grid--center"> <span>Content 1</span><img class="moveUpDown widthLogo"
@@ -358,7 +357,7 @@
         </div>
 
 
-        <section id="research">
+        <section id="content11">
 
 
           <div class="blankHS"></div>
@@ -382,7 +381,7 @@
 
 
         </section>
-        <section id="insights">
+        <section id="content12">
           <!-- Arrow -->
           <div class="wrapper">
             <div class="element">
@@ -516,7 +515,7 @@
 
         <div class="blankHS"></div>
 
-        <section id="personas">
+        <section id="content13">
 
           <div class="blankHS"></div>
           <!-- Arrow -->
@@ -537,7 +536,7 @@
           <!-- Img -->
         </section>
         <div class="blankHS"></div>
-        <section id="customerJoutney">
+        <section id="content14">
 
           <!-- Arrow -->
           <div class="wrapper">
@@ -579,7 +578,7 @@
         <div class="blankHS"></div>
       </section>
 
-      <section id="define">
+      <section id="content2">
 
         <div class="Grid Grid--gutters Grid--1of2 Grid--center u-textCenter">
           <div class="Grid-cell">
@@ -625,7 +624,7 @@
         </div>
 
         <div class="blankHXS"></div>
-        <section id="keyPainPoints">
+        <section id="content21">
           <!-- Arrow -->
           <div class="wrapper">
             <div class="element">
@@ -651,7 +650,7 @@
 
 
 
-          <section id="affinityMap">
+          <section id="content22">
             <!-- Arrow -->
             <div class="wrapper">
               <div class="element">
@@ -670,7 +669,7 @@
             <!-- Img -->
 
           </section>
-          <section id="earlyConcepts">
+          <section id="content23">
             <!-- Arrow -->
             <div class="wrapper">
               <div class="element">
@@ -784,7 +783,7 @@
       </section>
       <div class="blankHXS"></div>
 
-      <section id="ideation">
+      <section id="content3">
 
 
         <div class="Grid Grid--gutters Grid--1of2 Grid--center u-textCenter">
@@ -834,7 +833,7 @@
 
 
 
-        <section id="priorityMatrix">
+        <section id="content31">
 
           <!-- Arrow -->
           <div class="wrapper">
@@ -853,7 +852,7 @@
           </div>
           <!-- Img -->
         </section>
-        <section id="useTypes">
+        <section id="content32">
           <!-- Arrow -->
           <div class="wrapper">
             <div class="element">
@@ -873,7 +872,7 @@
         </section>
 
 
-        <section id="userFlow">
+        <section id="content33">
           <!-- Arrow -->
           <div class="wrapper">
             <div class="element">
@@ -924,7 +923,7 @@
 
       </section>
       <div class="blankHS"></div>
-      <section id="deliver">
+      <section id="content4">
         <div class="colorBgGrey">
           <div class="blankHS"></div>
 
@@ -971,7 +970,7 @@
             </div>
           </div>
           <div class="blankHS"></div>
-          <section id="screens">
+          <section id="content41">
 
             <!-- Arrow -->
             <div class="wrapper">
@@ -992,7 +991,7 @@
 
           </section>
           <div class="blankHS"></div>
-          <section id="prototype">
+          <section id="content42">
             <!-- Arrow -->
             <div class="wrapper">
               <div class="element">
@@ -1021,7 +1020,7 @@
           </section>
           <div class="blankHS"></div>
 
-          <section id="components">
+          <section id="content43">
             <!-- Arrow -->
             <div class="wrapper">
               <div class="element">
@@ -1049,8 +1048,8 @@
       <div class="blankHM"></div>
       <hr>
       <div class="blankHM"></div>
-      <!-- takeaways -->
-      <section id="takeaways">
+      <!-- content5 -->
+      <section id="content5">
 
         <!-- Arrow -->
         <div class="wrapper">
@@ -1116,58 +1115,48 @@
         </div>
 
       </section>
-      <!-- takeaways -->
+      <!-- content5 -->
     </div>
-    <nav class="section-nav APPOINTA">
+    <nav class="section-nav">
       <ol>
-        <li><a href="#discover" class="titleRightPanel">Content 1</a>
+        <li><a href="#content1" class="titleRightPanel">Content 1</a>
           <ul>
-            <li class="rightPanel"><a href="#research">C1 - SC 1 </a></li>
-            <li class="rightPanel"><a href="#insights">C1 - SC 2 </a></li>
-            <li class="rightPanel"><a href="#personas">C1 - SC 3 </a></li>
-            <li class="rightPanel"><a href="#customerJoutney">C1 - SC 4 </a></li>
+            <li class="rightPanel"><a href="#content11">C1 - SC 1 </a></li>
+            <li class="rightPanel"><a href="#content12">C1 - SC 2 </a></li>
+            <li class="rightPanel"><a href="#content13">C1 - SC 3 </a></li>
+            <li class="rightPanel"><a href="#content14">C1 - SC 4 </a></li>
           </ul>
 
         </li>
-        <li><a href="#define" class="titleRightPanel">Content 2</a>
+        <li><a href="#content2" class="titleRightPanel">Content 2</a>
           <ul>
-            <li class="rightPanel"><a href="#keyPainPoints">C2 - SC 1 </a></li>
-            <li class="rightPanel"><a href="#affinityMap">C2 - SC 2</a></li>
-            <li class="rightPanel"><a href="#earlyConcepts">C2 - SC 3 </a></li>
-
-
+            <li class="rightPanel"><a href="#content21">C2 - SC 1 </a></li>
+            <li class="rightPanel"><a href="#content22">C2 - SC 2</a></li>
+            <li class="rightPanel"><a href="#content23">C2 - SC 3 </a></li>
           </ul>
         </li>
 
 
-        <li><a href="#ideation" class="titleRightPanel">Content 3</a>
+        <li><a href="#content3" class="titleRightPanel">Content 3</a>
           <ul>
-            <li class="rightPanel"><a href="#priorityMatrix"> C3 - SC 1</a></li>
-            <li class="rightPanel"><a href="#useTypes">C3 - SC 2</a></li>
-            <li class="rightPanel"><a href="#userFlow">C3 - SC 3 </a></li>
+            <li class="rightPanel"><a href="#content31"> C3 - SC 1</a></li>
+            <li class="rightPanel"><a href="#content32">C3 - SC 2</a></li>
+            <li class="rightPanel"><a href="#content33">C3 - SC 3 </a></li>
 
 
           </ul>
         </li>
-        <li><a href="#deliver" class="titleRightPanel">Content 4</a>
+        <li><a href="#content4" class="titleRightPanel">Content 4</a>
           <ul>
-            <li class="rightPanel"><a href="#screens">C4 - SC 1</a></li>
-            <li class="rightPanel"><a href="#prototype">C4 - SC 2 </a></li>
-            <li class="rightPanel"><a href="#components">C4 - SC 3 </a></li>
+            <li class="rightPanel"><a href="#content41">C4 - SC 1</a></li>
+            <li class="rightPanel"><a href="#content42">C4 - SC 2 </a></li>
+            <li class="rightPanel"><a href="#content43">C4 - SC 3 </a></li>
 
           </ul>
         </li>
-        <li><a href="#takeaways" class="titleRightPanel">Content 5 </a></li>
+        <li><a href="#content5" class="titleRightPanel">Content 5 </a></li>
       </ol>
     </nav>
-
-
-
-
-
-
-
-
   </main>
 
 
