sub nav indentation

--- a/appointa/index.html
+++ b/appointa/index.html
@@ -439,6 +439,55 @@
 
 
   <main class="">
+    <nav class="section-nav">
+      <ol>
+        <li><a href="#discover" class="titleRightPanel">Discover</a>
+          <ul>
+            <li class="rightPanel"><a href="#research"> &#160; Research goals </a></li>
+            <li class="rightPanel"><a href="#insights"> &#160; Interview insights </a></li>
+            <li class="rightPanel"><a href="#empathyMap"> &#160; Empathy map </a></li>
+            <li class="rightPanel"><a href="#personas"> &#160; Personas </a></li>
+            <li class="rightPanel"><a href="#customerJoutney"> &#160; Customer journey map </a></li>
+          </ul>
+
+        </li>
+        <li><a href="#define" class="titleRightPanel">Define</a>
+          <ul>
+            <li class="rightPanel"><a href="#keyPainPoints"> &#160; Key pain points </a></li>
+            <li class="rightPanel"><a href="#affinityMap"> &#160; Affinity diagram</a></li>
+            <li class="rightPanel"><a href="#earlyConcepts"> &#160; Early concepts </a></li>
+
+
+          </ul>
+        </li>
+
+
+        <li><a href="#ideation" class="titleRightPanel">Develop</a>
+          <ul>
+            <li class="rightPanel"><a href="#opportunities"> &#160; Insights to opportunities</a></li>
+            <li class="rightPanel"><a href="#priorityMatrix"> &#160; Priority matrix</a></li>
+            <li class="rightPanel"><a href="#useTypes"> &#160; Personas</a></li>
+            <li class="rightPanel"><a href="#userFlow"> &#160; User flow </a></li>
+            <li class="rightPanel"><a href="#informationArchitecture"> &#160; Site Map</a>
+            </li>
+            <li class="rightPanel"><a href="#sketch"> &#160; Lo-fi sketch</a></li>
+            <li class="rightPanel"><a href="#mfScreens"> &#160; Mid-fi screen flow &#38; testing </a></li>
+            <li class="rightPanel"><a href="#mfScreensUpdate"> &#160; Mid-fi screen flow &#38; Iteration
+              </a></li>
+
+          </ul>
+        </li>
+        <li><a href="#deliver" class="titleRightPanel">Deliver</a>
+          <ul>
+            <li class="rightPanel"><a href="#screens"> &#160; Hi-fi screens</a></li>
+            <li class="rightPanel"><a href="#prototype"> &#160; Clickable prototype </a></li>
+            <li class="rightPanel"><a href="#components"> &#160; UI components </a></li>
+
+          </ul>
+        </li>
+        <li><a href="#takeaways">Outcomes </a></li>
+      </ol>
+    </nav>
     <div>
       <section id="discover" class="colorBgAPPOINTA">
         <div class="Grid Grid--gutters Grid--1of2 Grid--center u-textCenter">
@@ -2250,55 +2299,7 @@
       </section>
       <!-- takeaways -->
     </div>
-    <nav class="section-nav">
-      <ol>
-        <li><a href="#discover" class="titleRightPanel">Discover</a>
-          <ul>
-            <li class="rightPanel"><a href="#research">Research goals </a></li>
-            <li class="rightPanel"><a href="#insights">Interview insights </a></li>
-            <li class="rightPanel"><a href="#empathyMap">Empathy map </a></li>
-            <li class="rightPanel"><a href="#personas">Personas </a></li>
-            <li class="rightPanel"><a href="#customerJoutney">Customer journey map </a></li>
-          </ul>
 
-        </li>
-        <li><a href="#define" class="titleRightPanel">Define</a>
-          <ul>
-            <li class="rightPanel"><a href="#keyPainPoints">Key pain points </a></li>
-            <li class="rightPanel"><a href="#affinityMap"> Affinity diagram</a></li>
-            <li class="rightPanel"><a href="#earlyConcepts">Early concepts </a></li>
-
-
-          </ul>
-        </li>
-
-
-        <li><a href="#ideation" class="titleRightPanel">Develop</a>
-          <ul>
-            <li class="rightPanel"><a href="#opportunities"> Insights to opportunities</a></li>
-            <li class="rightPanel"><a href="#priorityMatrix"> Priority matrix</a></li>
-            <li class="rightPanel"><a href="#useTypes">Personas</a></li>
-            <li class="rightPanel"><a href="#userFlow">User flow </a></li>
-            <li class="rightPanel"><a href="#informationArchitecture">Site Map</a>
-            </li>
-            <li class="rightPanel"><a href="#sketch">Lo-fi sketch</a></li>
-            <li class="rightPanel"><a href="#mfScreens">Mid-fi screen flow &#38; testing </a></li>
-            <li class="rightPanel"><a href="#mfScreensUpdate">Mid-fi screen flow &#38; Iteration
-              </a></li>
-
-          </ul>
-        </li>
-        <li><a href="#deliver" class="titleRightPanel">Deliver</a>
-          <ul>
-            <li class="rightPanel"><a href="#screens">Hi-fi screens</a></li>
-            <li class="rightPanel"><a href="#prototype">Clickable prototype </a></li>
-            <li class="rightPanel"><a href="#components">UI components </a></li>
-
-          </ul>
-        </li>
-        <li><a href="#takeaways">Outcomes </a></li>
-      </ol>
-    </nav>
   </main>
 
   <div class="blankHS"></div>
@@ -2348,7 +2349,7 @@
   <footer class="Grey100Bg">
     <div class="element">
       <div class="footer">
-        <h5 class="footer-left"> &#169; 2023 &#8212; VICKY WANG</h5>
+        <h4 class="footer-left"> &#169; 2023 &#8212; VICKY WANG</h4>
         <div class="footer-right">
           <a href="mailto:vickyw.design@gmail.com">
             <img class="footer-logo" src="../../icon/mail.svg" alt="email">
