--- a/navigation/V1/index.html
+++ b/navigation/V1/index.html
@@ -314,36 +314,36 @@
       <ol>
         <li><a href="#content1" class="titleRightPanel">Content 1</a>
           <ul>
-            <li class="rightPanel"><a href="#content11">C1 - SC 1 </a></li>
-            <li class="rightPanel"><a href="#content12">C1 - SC 2 </a></li>
-            <li class="rightPanel"><a href="#content13">C1 - SC 3 </a></li>
-            <li class="rightPanel"><a href="#content14">C1 - SC 4 </a></li>
+            <li class="rightPanel"><a href="#content11"> &#160; C1 - SC 1 </a></li>
+            <li class="rightPanel"><a href="#content12"> &#160; C1 - SC 2 </a></li>
+            <li class="rightPanel"><a href="#content13"> &#160; C1 - SC 3 </a></li>
+            <li class="rightPanel"><a href="#content14"> &#160; C1 - SC 4 </a></li>
           </ul>
 
         </li>
         <li><a href="#content2" class="titleRightPanel">Content 2</a>
           <ul>
-            <li class="rightPanel"><a href="#content21">C2 - SC 1 </a></li>
-            <li class="rightPanel"><a href="#content22">C2 - SC 2</a></li>
-            <li class="rightPanel"><a href="#content23">C2 - SC 3 </a></li>
+            <li class="rightPanel"><a href="#content21"> &#160; C2 - SC 1 </a></li>
+            <li class="rightPanel"><a href="#content22"> &#160; C2 - SC 2</a></li>
+            <li class="rightPanel"><a href="#content23"> &#160; C2 - SC 3 </a></li>
           </ul>
         </li>
 
 
         <li><a href="#content3" class="titleRightPanel">Content 3</a>
           <ul>
-            <li class="rightPanel"><a href="#content31"> C3 - SC 1</a></li>
-            <li class="rightPanel"><a href="#content32">C3 - SC 2</a></li>
-            <li class="rightPanel"><a href="#content33">C3 - SC 3 </a></li>
+            <li class="rightPanel"><a href="#content31"> &#160; C3 - SC 1</a></li>
+            <li class="rightPanel"><a href="#content32"> &#160; C3 - SC 2</a></li>
+            <li class="rightPanel"><a href="#content33"> &#160; C3 - SC 3 </a></li>
 
 
           </ul>
         </li>
         <li><a href="#content4" class="titleRightPanel">Content 4</a>
           <ul>
-            <li class="rightPanel"><a href="#content41">C4 - SC 1</a></li>
-            <li class="rightPanel"><a href="#content42">C4 - SC 2 </a></li>
-            <li class="rightPanel"><a href="#content43">C4 - SC 3 </a></li>
+            <li class="rightPanel"><a href="#content41"> &#160; C4 - SC 1</a></li>
+            <li class="rightPanel"><a href="#content42"> &#160; C4 - SC 2 </a></li>
+            <li class="rightPanel"><a href="#content43"> &#160; C4 - SC 3 </a></li>
 
           </ul>
         </li>
