--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
                   <div class="element">
                     <div class="element">
                       <h5>For daily worship</h5>
-                      <h3 class="arrCard"><strong>GLORIFY</strong></h3>
+                      <h3 class="arrCard" data-aos="fade-up"><strong>GLORIFY</strong></h3>
                       <h4>Integrating a community experience into the existing Glorify Application</h4>
                     </div>
                   </div>
@@ -307,7 +307,7 @@
                   <div class="element">
                     <div class="element">
                       <h5>Password is required </h5>
-                      <h3 class="arrCard"><strong>WORK SAMPLES</strong></h3>
+                      <h3 class="arrCard" data-aos="fade-up"><strong>WORK SAMPLES</strong></h3>
                       <h4>Extensive startup experience with full design process immersion and diverse skill set</h4>
                     </div>
                   </div>
@@ -328,7 +328,7 @@
                   <div class="element">
                     <div class="element">
                       <h5>For job interview scheduling</h5>
-                      <h3 class="arrCard"><strong>APPOINTA</strong></h3>
+                      <h3 class="arrCard" data-aos="fade-up"><strong>APPOINTA</strong></h3>
                       <h4>Streamline the job interview scheduling process to make it more efficient,
                         convenient, and intuitive</h4>
                     </div>
@@ -346,7 +346,7 @@
                 <div class="element">
                   <div class="element">
                     <h5>For tracking business performance</h5>
-                    <h3 class="arrCard"><strong>SEER</strong></h3>
+                    <h3 class="arrCard" data-aos="fade-up"><strong>SEER</strong></h3>
                     <!--Analysis Report-->
                     <h4>Help the brand managers understand their potential users and promote their
                       brand on Reddit</h4>
@@ -369,7 +369,7 @@
                   <div class="element">
                     <div class="element">
                       <h5>For website vickywang.me </h5>
-                      <h3 class="arrCard"><strong>DESIGN SYSTEM</strong></h3>
+                      <h3 class="arrCard" data-aos="fade-up"><strong>DESIGN SYSTEM</strong></h3>
                       <h4>Creating a design system to establish consistent branding and styling across the entire
                         website
                       </h4>
@@ -389,7 +389,7 @@
                   <div class="element">
                     <div class="element">
                       <h5>For website case study &#64; vickywang.me </h5>
-                      <h3 class="arrCard"><strong>NAVIGATION DESIGN</strong></h3>
+                      <h3 class="arrCard" data-aos="fade-up"><strong>NAVIGATION DESIGN</strong></h3>
                       <h4>Developing a more structured and logical navigation system for displaying case studies
                       </h4>
                     </div>
