--- a/appointa/index.html
+++ b/appointa/index.html
@@ -539,21 +539,14 @@
 
 
           <div class="blankHS"></div>
-
           <!-- Arrow -->
           <div class="wrapper">
-            <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
-              <div class="Grid-cell">
-                <div class="element">
-                  <div class="Grid">
-                    <p class="tArrow"> User research goals</p>
-                    <img class="se-arrow" src="../icon/arrow-se.svg" alt="se-arrow">
-                  </div>
-                </div>
-              </div>
+            <div class="element">
+              <h2 class="tArrow"> User research goals <img class="seArrow" src="../../icon/arrow-se.svg" alt="icon arrow"></h2>
             </div>
           </div>
           <!-- Arrow -->
+
           <div class="Grid Grid--full wrapper">
             <div class="Grid-cell">
               <div class="element">
