--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
+<!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -169,7 +171,8 @@
   <header>
     <nav class="header" id="header">
       <div class="backgroundColorNav">
-        <a href="http://vickywang.me/"><img class="logo pointer" src="./icon/LOGO.svg" alt="VW" title="vickywang.me"></a>
+        <a href="http://vickywang.me/"><img class="logo pointer" src="./icon/LOGO.svg" alt="VW"
+            title="vickywang.me"></a>
         <div class="navbar">
           <ul class="nav-menu">
             <li class="nav-item active greenNav marginZero"><a href="/" class="nav-link box">PROJECT</a>
@@ -293,10 +296,10 @@
                   <img class="img__img" alt="Work Samples" src="./image/Cover_worksample.png" />
                   <div class="img__description">
                     <div class="input-field">
+                      <label for="password">Password</label>
                       <input type="password" id="password" placeholder="Enter password">
-
                       <button class="passwordArr" type="submit">
-                        <img src="./icon/arrow-forward.svg" alt="Enter Arrow">
+                        <img src="./icon/arrow-forward.svg" alt="Enter">
                         <!--  <i class="fas fa-chevron-right"></i> -->
                       </button>
                       <div class="pwIncorrectHeight">
