--- a/architecture/index.html
+++ b/architecture/index.html
@@ -1,5 +1,5 @@
-<html>
-
+<!DOCTYPE html>
+<html lang="en">
 <head>
 
   <meta charset="UTF-8">
@@ -43,7 +43,9 @@
 
   <link rel="stylesheet" href="../main.css">
   <script type="text/javascript" src="../scripts.js"></script>
-<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
+    rel="stylesheet">
   <!--black font-family: 'Lato', sans-serif; -->
   <link
     href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
@@ -120,7 +122,7 @@
   <!-- header -->
   <nav class="header" id="header">
     <div class="backgroundColorNav">
-      <a href="http://vickywang.me/"><img class="logo pointer" src="../icon/LOGO.svg" alt="VW" title="vickywang.me"></a>
+      <a href="http://vickywang.me/" class="logo pointer colorBlack">VW</a>
 
       <div class="navbar">
         <ul class="nav-menu">
@@ -162,7 +164,10 @@
       </div>
       <div class="Grid Grid--full">
         <div class="Grid-cell Grey700">
-          <h3>Throughout my three-year M.Arch program, I delved into design theories, methods, and practices, which are exemplified in the following projects. These projects placed great emphasis on the significant determinants of building form, encompassing format, spatial arrangement, materiality, tectonics, social considerations, technology, and environmental factors.</h3>
+          <h3>Throughout my three-year M.Arch program, I delved into design theories, methods, and practices, which are
+            exemplified in the following projects. These projects placed great emphasis on the significant determinants
+            of building form, encompassing format, spatial arrangement, materiality, tectonics, social considerations,
+            technology, and environmental factors.</h3>
         </div>
       </div>
     </div>
@@ -189,7 +194,7 @@
               <img src="./ar_01.svg" alt="Appointa">
               <div class="elementInner">
                 <h5>Activity Center</h5>
-                <h3 class="arrCard"><strong>RECREATION COMMONS</strong></h3>
+                <h3 class="arrCard" data-aos="fade-up"><strong>RECREATION COMMONS</strong></h3>
 
                 <p class="lineHorizAll"></p>
                 <h6 class=""> <strong>Studio:</strong> &nbsp; INTEGRATED DESIGN STUDIO, ARCH 203
@@ -204,21 +209,20 @@
             </div>
           </div>
         </a>
-      </div>      
+      </div>
       <div class="Grid-cell">
         <div class="element">
           <div class=" float cardBorder shadowBoxLt">
-            <img src="./ar_06.png" alt="Appointa">
+            <img src="./ar_06.png" alt="Kappe House">
             <div class="elementInner">
               <h5>Form finding exercise </h5>
-              <h3 class="arrCard"><strong>KAPPE HOUSE STUDY</strong></h3>
+              <h3 class="arrCard" data-aos="fade-up"><strong>KAPPE HOUSE STUDY</strong></h3>
 
               <p class="lineHorizAll"></p>
               <h6 class=""> <strong>Studio:</strong> &nbsp; THE MAKING OF BUILDINGS
               </h6>
               <h6><strong>Duration: </strong> <span class="textItalic">&nbsp;Fall 2015 | 1 Semester,
-                  1
-                  Unit</span> </h6>
+                  1 Unit</span> </h6>
               <h6> <strong>Project:</strong> &nbsp;Summer Program, CED, UC Berkeley</h6>
               <h6> <strong>Site:</strong> &nbsp;KAPPE HOUSE </h6>
               <h6> <strong>Scale:</strong> &nbsp; Total Floor Area: 4,000 sq.ft.</h6>
@@ -246,7 +250,7 @@
               <img src="./ar_02.jpg" alt="Appointa">
               <div class="elementInner">
                 <h5>Library and infrastructure</h5>
-                <h3 class="arrCard"><strong>NARROW STRIPES</strong></h3>
+                <h3 class="arrCard" data-aos="fade-up"><strong>NARROW STRIPES</strong></h3>
 
                 <p class="lineHorizAll"></p>
                 <h6 class=""> <strong>Studio:</strong> &nbsp; COMPETITION
@@ -270,7 +274,7 @@
               <img src="./ar_03.jpg" alt="Appointa">
               <div class="elementInner">
                 <h5>Pavilion</h5>
-                <h3 class="arrCard"><strong>RECOVERY OF RIVER EDGES</strong></h3>
+                <h3 class="arrCard" data-aos="fade-up"><strong>RECOVERY OF RIVER EDGES</strong></h3>
 
                 <p class="lineHorizAll"></p>
                 <h6 class=""> <strong>Studio:</strong> &nbsp; Introduction to Architecture Studio 2
@@ -302,7 +306,7 @@
               <img src="./ar_07.jpg" alt="Appointa">
               <div class="elementInner">
                 <h5>On order: Differenciated</h5>
-                <h3 class="arrCard"><strong>CONTINUITY OF OBJECTS</strong></h3>
+                <h3 class="arrCard" data-aos="fade-up"><strong>CONTINUITY OF OBJECTS</strong></h3>
 
                 <p class="lineHorizAll"></p>
                 <h6 class=""> <strong>Studio:</strong> &nbsp; THESIS STUDIO, ARCH 204 A & B
@@ -324,7 +328,7 @@
               <img src="./ar_05.jpg" alt="Appointa">
               <div class="elementInner">
                 <h5>Form finding exercise </h5>
-                <h3 class="arrCard"><strong>THE ROTATION OF CURVES</strong></h3>
+                <h3 class="arrCard" data-aos="fade-up"><strong>THE ROTATION OF CURVES</strong></h3>
 
                 <p class="lineHorizAll"></p>
                 <h6 class=""> <strong>Studio:</strong> &nbsp; Introduction to Architecture Studio 1
@@ -355,7 +359,7 @@
               <img src="./ar_04.jpg" alt="Appointa">
               <div class="elementInner">
                 <h5>Urban public space</h5>
-                <h3 class="arrCard"><strong>MANIFOLD GROUND</strong></h3>
+                <h3 class="arrCard" data-aos="fade-up"><strong>MANIFOLD GROUND</strong></h3>
 
                 <p class="lineHorizAll"></p>
                 <h6 class=""> <strong>Studio:</strong> &nbsp; [IN]ARCH ADV</h6>
@@ -376,7 +380,7 @@
               <img src="./ar_08.jpg" alt="Appointa">
               <div class="elementInner">
                 <h5>Musume extension</h5>
-                <h3 class="arrCard"><strong>LACAMA</strong></h3>
+                <h3 class="arrCard" data-aos="fade-up"><strong>LACAMA</strong></h3>
 
                 <p class="lineHorizAll"></p>
                 <h6 class=""> <strong>Studio:</strong> &nbsp; ARCH 201 </h6>
@@ -400,7 +404,8 @@
     <div class="Grid-cell">
       <div data-aos="fade-up">
         <h4 class="element">
-          Thank You for Visiting! please <a class="textUnderline" href="mailto:vickyw.design@gmail.com">email</a> me about professional projects.
+          Thank You for Visiting! please <a class="textUnderline" href="mailto:vickyw.design@gmail.com">email</a> me
+          about professional projects.
         </h4>
       </div>
       <a href="https://vickywang.me" class="textDecor">VICKYWANG.ME</a>
