--- a/photography/index.html
+++ b/photography/index.html
@@ -656,7 +656,7 @@
         <h4 class="element">
           Thanks for stopping by&#33; I'll be sharing more photos soon&#33; </h4>
       </div>
-      <a href="https://vickywang.me" class="textDecor">VICKYWANG.ME</a>
+      <a href="/" class=""><img class="widthXS" src="../icon/LOGOtxt.svg" alt="VW" title="vickywang.me"></a>
     </div>
   </div>
   <!-- message -->
