--- a/architecture/index.html
+++ b/architecture/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 
   <meta charset="UTF-8">
@@ -408,16 +409,16 @@
           about professional projects.
         </h4>
       </div>
-      <a href="https://vickywang.me" class="textDecor">VICKYWANG.ME</a>
+      <a href="/" class=""><img class="widthXS" src="../icon/LOGOtxt.svg" alt="VW" title="vickywang.me"></a>
     </div>
   </div>
   <!-- message -->
   <div class="blankHL"></div>
-  <!--back to top-->
+  <!-- back to top -->
   <button id="myBtn" title="Back to top">
     <div id="dad">
       <div id="bro">
-        <img id="bottom-arrow" class="" src="../icon/arrow-top.svg" alt="back to top">
+        <img src="../icon/arrow-top.svg" alt="back to top">
       </div>
       <div id="sis">
         <h4>TOP</h4>
